app_gateway_ingress_motor_boxalerta.yaml
apiVersion: networking.k8s.io/v1
#networking.k8s.io/v1beta
#Use v1beta1 for kubernetes version < 1.19 …
#networking.k8s.io/v1
#extensions/v1beta1
kind: Ingress
metadata:
  name: motorboxalerta
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/use-public-ip: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "motor-boxalerta-dev-claro-com-br"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "10"
    appgw.ingress.kubernetes.io/health-probe-interval: "10"
    appgw.ingress.kubernetes.io/health-probe-timeout: "3"
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "2"
    appgw.ingress.kubernetes.io/request-timeout: "600"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /boxalerta/*       
            pathType: Prefix        
            backend:
              service:
                name: motor-boxalertas
                port:
                  number: 5000
